--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
-  "start_url": "/",
+  "start_url": "/calcImam/",
   "icons": [
     {
       "src": "assets/images/icons/icon-72x72.png",
